# autowiki

./: .codex-last-thread  .codex-use-this-prompt  .gitignore  AGENTS.md  README.md  index.md  pyproject.toml  setup.sh  wq.py
.agents/skills/ingest-information/: SKILL.md
.agents/skills/onboard-user/: SKILL.md
.agents/skills/talk-with-wiki/: SKILL.md
.claude/: settings.json  statusline.sh
.codex/: config.toml
.githooks/: pre-commit
src/autowiki/: __init__.py  cli.py  frontmatter.py  frontmatter_validation.py  index_builder.py
